syntax = "proto3";

option csharp_namespace = "GrpcService";

package greet;

import "customTypes.proto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
    int32 id = 1;
    string first_name = 2;
    customTypes.DecimalValue value = 3;
}
